syntax = "proto3";

option csharp_namespace = "LoteTablas.Grpc.Definitions.Common";

package Common;

message EmptyRequest {}

message SuccessReply {
	bool success = 1;
}

message UserIdRequest {
  string userId = 1;
}

message DataChunk 
{
	bytes data = 1;
}